# xrnUtil

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/sources/scripts/: biggestVersionTag
.github/workflows/: codeql-analysis.yml  continuous-integration.yml
.toolchain/: CompilerFlags.cmake  Dependencies.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Shaders.cmake  StandardProjectSettings.cmake  Tests.cmake  compile
sources/: CMakeLists.txt  main.cpp  pch.hpp
sources/xrn/: Util.hpp
sources/xrn/Util/: Clock.hpp  Clock.impl.hpp  ConstOptionalReference.impl.hpp  Constraint.hpp  File.hpp  File.impl.hpp  Id.hpp  Id.impl.hpp  OptionalReference.hpp  OptionalReference.impl.hpp  Random.hpp  Random.impl.hpp  SyncedThreads.hpp  SyncedThreads.impl.hpp  Time.hpp  Time.impl.hpp
tests/fuzz/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/basic/xrn/Util/: Clock.cpp  Time.cpp
tests/unit/constexpr/: main.cpp
